# CppRayTracerChallenge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppPropertySheet.props  CppRayTracerChallenge.sln  Doxyfile  readme.md
assets/: cylinder.blend  cylinder.blend1  cylinder.ply  gizmo3d.blend  gizmo3d.blend1  gizmo3d.ply  gizmo3d_position.blend  gizmo3d_rotation.ply  gizmo3d_scale.blend  gizmo3d_scale.blend1  gizmo3d_scale.ply  light.blend  light.blend1  light.ply  sphere.blend  sphere.blend1
cmake/: SetupGoogleTest.cmake
docs/: class_diagram.drawio  world_file_example.yml  world_file_schema.yml
docs/html/: annotated.html  annotated_dup.js  base__image__serializer_8cpp.html  base__image__serializer_8cpp__incl.map  base__image__serializer_8cpp__incl.md5  base__image__serializer_8cpp_source.html  base__image__serializer_8h.html  base__image__serializer_8h__dep__incl.map  base__image__serializer_8h__dep__incl.md5  base__image__serializer_8h__incl.map  base__image__serializer_8h__incl.md5  base__image__serializer_8h_source.html  bounding__box_8cpp.html  bounding__box_8cpp__incl.map  bounding__box_8cpp__incl.md5  bounding__box_8cpp_source.html  bounding__box_8h.html  bounding__box_8h__dep__incl.map  bounding__box_8h__dep__incl.md5  bounding__box_8h__incl.map  bounding__box_8h__incl.md5  bounding__box_8h_source.html  bounding__box__test_8cpp.html  bounding__box__test_8cpp.js  bounding__box__test_8cpp__incl.map  bounding__box__test_8cpp__incl.md5  bounding__box__test_8cpp_a03874c00d2581b4640befd8f8e5e3aa3_cgraph.map  bounding__box__test_8cpp_a03874c00d2581b4640befd8f8e5e3aa3_cgraph.md5  bounding__box__test_8cpp_a100bf9a23f5da96468576075aa24e1ff_cgraph.md5  bounding__box__test_8cpp_a5dfd729bdd9f6fdb26e7c50f484a1cf2_cgraph.map  bounding__box__test_8cpp_a719f93e461f1eb60e8fdedabbb5fdfc8_cgraph.map  bounding__box__test_8cpp_a719f93e461f1eb60e8fdedabbb5fdfc8_cgraph.md5  bounding__box__test_8cpp_a83b58450029c54eb23f5ec69b9dc1c91_cgraph.map  bounding__box__test_8cpp_a83b58450029c54eb23f5ec69b9dc1c91_cgraph.md5  bounding__box__test_8cpp_aac5928e110070d606ed300ac7d003257_cgraph.map  bounding__box__test_8cpp_af43cca5d6bbb382ec12ff88b89d69b7d_cgraph.map  bounding__box__test_8cpp_af43cca5d6bbb382ec12ff88b89d69b7d_cgraph.md5  bounding__box__test_8cpp_source.html  camera_8cpp.html  camera_8cpp.js  (+2650 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  (+66 more)
samples/: book_example.yml
src/core/: CppRayTracerChallengeCore.vcxproj  CppRayTracerChallengeCore.vcxproj.filters  foo.cpp  foo.h
src/core/compression/: deflate.cpp  deflate.h  deflate_block.cpp  deflate_block.h  huffman_coding.cpp  huffman_coding.h  zlib.cpp  zlib.h
src/core/encryption/: adler32.cpp  adler32.h  crc.cpp  crc.h
src/core/graphics/: canvas.cpp  canvas.h  color.cpp  color.h  image.cpp  image.h
src/core/helpers/: material_helper.cpp  material_helper.h  material_helper.hpp  polymorphic_comparable.h
src/core/io/: args.cpp  args.h  portable_pixmap.cpp  portable_pixmap.h
src/core/math/: bounding_box.cpp  bounding_box.h  comparison.h  cone.cpp  cone.h  constants.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  double.cpp  double.h  float.cpp  float.h  i_cartesian.h  i_intersectable.h  i_shape.h  intersection.cpp  intersection.h  intersections.cpp  intersections.h  matrix.h  perlin_noise.cpp  perlin_noise.h  plane.cpp  plane.h  point.cpp  point.h  ray.cpp  ray.h  shape.cpp  shape.h  smooth_triangle.cpp  smooth_triangle.h  sphere.cpp  sphere.h  torus.cpp  torus.h  transform.cpp  transform.h  (+8 more)
src/core/renderer/: bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  computed_values.cpp  computed_values.h  csg.cpp  csg.h  group.cpp  group.h  i_group.h  lighting.cpp  lighting.h  material.cpp  material.h  object.cpp  object.h  pattern.cpp  pattern.h  point_light.cpp  point_light.h  render_job.cpp  render_job.h  shape.cpp  shape.h  sphere.cpp  sphere.h  world.cpp  world.h
src/core/serializer/: base_image_serializer.cpp  base_image_serializer.h  camera_deserializer.cpp  camera_deserializer.h  i_image_file.h  portable_network_graphics_serializer.cpp  portable_network_graphics_serializer.h  portable_pixmap.cpp  portable_pixmap.h  portable_pixmap_image_file.cpp  portable_pixmap_image_file.h  portable_pixmap_image_serializer.cpp  portable_pixmap_image_serializer.h  wavefront_obj_deserializer.cpp  wavefront_obj_deserializer.h  wavefront_obj_serializer.cpp  wavefront_obj_serializer.h  world_deserializer.cpp  world_deserializer.h  world_serializer.cpp  world_serializer.h
src/lib/DearImGui/: DearImGui.vcxproj  DearImGui.vcxproj.filters  imgui.h  imgui_widgets.cpp
src/lib/NativeFileDialog/: NativeFileDialog.vcxproj  NativeFileDialog.vcxproj.filters
src/lib/RPly/: RPly.vcxproj  RPly.vcxproj.filters  rply.c
src/lib/glad/: glad.h  glad.vcxproj  glad.vcxproj.filters
src/lib/glfw/: glfw.vcxproj  glfw.vcxproj.filters
src/lib/taskflow/: taskflow.vcxproj  taskflow.vcxproj.filters
src/lib/tinyxml2/: tinyXML2.vcxproj
src/main/: CppRayTracerChallengeMain.vcxproj  CppRayTracerChallengeMain.vcxproj.filters  imgui.ini  imgui_default_layout.ini  main.cpp  win32_main.cpp  win32_main_old.cpp
src/main/rogll/: camera.cpp  camera.h  include.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.h  mesh_instance.cpp  mesh_instance.h  render_batch.cpp  render_batch.h  renderer.cpp  renderer.h  shader.cpp  vertex_array.cpp  vertex_attributes.cpp  vertex_attributes.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/main/src/: editor_actions.cpp  editor_actions.h  editor_axis.cpp  ply.h  (+21 more)
src/test/: CppRayTracerChallengeTest.vcxproj  CppRayTracerChallengeTest.vcxproj.filters  main.cpp
(+103 files in other folders)
